; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_arv.c_wait_for_vsync.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_arv.c_wait_for_vsync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ARVCR0 = common dso_local global i32 0, align 4
@ARVCR0_VDS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wait_for_vsync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wait_for_vsync() #0 {
  br label %1

1:                                                ; preds = %7, %0
  %2 = load i32, i32* @ARVCR0, align 4
  %3 = call i32 @ar_inl(i32 %2)
  %4 = load i32, i32* @ARVCR0_VDS, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @cpu_relax()
  br label %1

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %17, %9
  %11 = load i32, i32* @ARVCR0, align 4
  %12 = call i32 @ar_inl(i32 %11)
  %13 = load i32, i32* @ARVCR0_VDS, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  br i1 %16, label %17, label %19

17:                                               ; preds = %10
  %18 = call i32 (...) @cpu_relax()
  br label %10

19:                                               ; preds = %10
  ret void
}

declare dso_local i32 @ar_inl(i32) #1

declare dso_local i32 @cpu_relax(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
